[package]
name = "dgit2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chalk = "0.1.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
pinata-sdk = "1.1.0"
dotenv = "0.15.0"
ethcontract = "0.25.7"
walkdir = "2.5.0"
