[package]
name = "dgit2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chalk = "0.1.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
pinata-sdk = "1.1.0"
dotenv = "0.15.0"
ethcontract = "0.25.7"
walkdir = "2.5.0"
reqwest = "0.12.4"
hex = "0.4.3"
flate2 = "1.0.30"
sha1 = "0.10.6"
async-recursion = "1.1.1"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
colored = "2.1.0"
